# arma-webhooks

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: discord.rs  lib.rs  rest.rs
