[package]
name = "arma-webhooks"
version = "0.2.0"
edition = "2021"

[lib]
name = "arma_webhooks"
crate-type = ["cdylib"]

[dependencies]
arma-rs = "1.10.5"
tokio = { version = "1.34.0", features = ["full"] }
once_cell = "1.18.0"
serde_yaml = "0.9.27"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.140"
